tests/NormalTests/paczka1/fuzzy1/96639420.err
Error in line 1: S160 A168 27,6
Error in line 9: cPKJG4gb S160 7,0
Error in line 10: cPKJG4gb A879 31,5
Error in line 13: S160 S160 22,5
Error in line 25: S1b0 A1b8 28,5
Error in line 20: N4VZ5 S160 22,9
Error in line 26: N4VZ5 S666 9,2
Error in line 30: N4VZ5 A168 75,1
Error in line 31: N4VZ5 S160 64,5
Error in line 34: vrIÆ0 A168 256,2
Error in line 29: WkdmuUGiZe S666 55,9
Error in line 18: S160 A879 61,8
